--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,1 +1,28 @@
-
+name: Java CI with Gradle
+on:
+  push:
+    branches: [ main ]
+    
+jobs:
+  CI:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: gradle      
+    - name: Grant execute permission for gradlew
+      run: chmod -x GymPrj/gradlew
+    - name: Build with Gradle
+      run: |
+        cd GymPrj
+        sudo ./gradlew build
+    - name: Build Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: qwe199942/dockerepo
+        tags: latest
+        registry: docker.io
