--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,10 +15,10 @@ jobs:
         distribution: 'adopt'
         cache: gradle      
     - name: Grant execute permission for gradlew
-      run: chmod -x GymPrj/gradlew
+      run: chmod -x Backend/GymPrj/gradlew
     - name: Build with Gradle
       run: |
-        cd GymPrj
+        cd Backend/GymPrj
         sudo ./gradlew build
     - name: Build Docker Image
       uses: mr-smithers-excellent/docker-build-push@v5
