--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ jobs:
         distribution: 'adopt'
         cache: gradle      
     - name: Grant execute permission for gradlew
-      run: chmod -x Backend/GymPrj/gradlew
+      run: chmod -x GymPrj/gradlew
     - name: Build with Gradle
       run: |
         cd Backend/GymPrj
