--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,7 @@ jobs:
   deploy:
     needs: CI
     name: Deploy
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted ]
     steps:
       - name: Login to Docker
         uses: docker/login-action@v1
