--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,7 @@ jobs:
   deploy:
     needs: CI
     name: Deploy
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Login to Docker
         uses: docker/login-action@v1
@@ -45,6 +45,6 @@ jobs:
           password: ${{ secrets.DOCKER_PW }}
       - name: Docker run
         run: |
-          docker stop GymPrj && docker rm -fv GymPrj
+          docker stop dockerepo && docker rm -fv dockerepo
           docker rmi -f qwe199942/dockerepo
-          docker run -d -p 8080:8080 --name GymPrj --restart always qwe199942/dockerepo:latest
+          docker run -d -p 8080:8080 --name dockerepo --restart always qwe199942/dockerepo:latest
