--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build Docker Image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
-        image: qwe199942/dockerepo
+        image: qwe199942/gymprj
         tags: latest
         registry: docker.io
         username: ${{ secrets.DOCKER_ID }}
@@ -45,6 +45,6 @@ jobs:
           password: ${{ secrets.DOCKER_PW }}
       - name: Docker run
         run: |
-          docker stop dockerepo && docker rm -fv dockerepo
-          docker rmi -f qwe199942/dockerepo
-          docker run -d -p 8080:8080 --name dockerepo --restart always qwe199942/dockerepo:latest
+          docker stop gymprj && docker rm -fv gymprj
+          docker rmi -f qwe199942/gymprj
+          docker run -d -p 8080:8080 --name gymprj --restart always qwe199942/gymprj:latest
