--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
   deploy:
     needs: CI
     name: Deploy
-    runs-on: [ self-hosted ]
+    runs-on: ${{ secrets.UBUNTU_IP }}
     steps:
       - name: Login to Docker
         uses: docker/login-action@v1
