--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@ on:
     
 jobs:
   CI:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -34,7 +34,7 @@ jobs:
   deploy:
     needs: CI
     name: Deploy
-    runs-on: ${{ secrets.UBUNTU_IP }}
+    runs-on: [ self-hosted ]
     steps:
       - name: Login to Docker
         uses: docker/login-action@v1
