feat: context-path 추가

--- a/GymPrj/src/main/resources/application.yml
+++ b/GymPrj/src/main/resources/application.yml
@@ -13,6 +13,10 @@ logging:
   level:
     org.springframework.orm.jpa: DEBUG
 
+server:
+  servlet:
+    context-path: /api
+
 
 jasypt:
   encryptor:
