--- a/GymPrj/.gitignore
+++ b/GymPrj/.gitignore
@@ -26,6 +26,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 /src/main/resources/config
+/src/main/java/GymInfoService/GymPrj/domain/example
 
 ### NetBeans ###
 /nbproject/private/
